# seeksense-core

./: .gitignore  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml
docs/: 01_paper_breakdown.md  02_scope.md  03_stage_d_habitat_smoke_run.md  04_confidence_fusion_and_ranking.md  05_stage_d_habitat_smoke_run.md  architecture.md  simulation-evaluation-v0.md
docs/assets/: frontier_waypoints_example.json
docs/assets/stage_d_sample/: EVIDENCE.md  metrics.json
results/ablation/: frontier_rankings.json
results/vlm_smoke/: vlm_score.json
scripts/: frontier_ranking_ablation.py  generate_evidence_pack.py  generate_synthetic_frontier_example.py  run_stage_d_habitat_smoke.py  vlm_score_smoke.py
sim/seeksense_sim/: package.xml  setup.cfg  setup.py
sim/seeksense_sim/seeksense_sim/: __init__.py  semantic_search_client.py
src/vlfm_repro/frontier/: frontier_extractor.py
src/vlfm_repro/mapping/: occupancy_grid.py
src/vlfm_repro/nav/: frontier_ranker.py
src/vlfm_repro/vlm/: observation_updater.py  scorers.py  value_map.py
tests/: test_dummy_scorer.py  test_frontier_extraction.py  test_frontier_ranking.py  test_observation_updater.py
