<?xml version="1.0"?>
<package format="3">
  <name>seeksense_sim</name>
  <version>0.0.1</version>
  <description>Placeholder ROS2 integration package for SeekSense semantic search client.</description>

  <maintainer email="m.swalihu@hotmail.com">M. Swalihu</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>